--- a/bolo-fries/berry.html
+++ b/bolo-fries/berry.html
@@ -1,3 +1,4 @@
+<<<<<<<< HEAD:bolo-fries/berry.html
 <!DOCTYPE html>
 <html lang="id">
 <head>
@@ -55,3 +56,63 @@
 
 </body>
 </html>
+========
+<!DOCTYPE html>
+<html lang="id">
+<head>
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>Berry Delight</title>
+  <script src="https://cdn.tailwindcss.com"></script>
+  <link rel="stylesheet" href="style.css">
+</head>
+<body class="bg-[#EDE3D5] font-sans">
+
+  <!-- Header -->
+  <div class="bg-[#B7471E] text-white p-4 flex justify-between items-center">
+    <a href="index.html" class="bg-[#F7B92A] p-2 rounded-lg">
+      <svg xmlns="http://www.w3.org/2000/svg" class="h-6 w-6 text-white" fill="none" viewBox="0 0 24 24" stroke="currentColor">
+        <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M15 19l-7-7 7-7" />
+      </svg>
+    </a>
+    <button class="bg-[#F7B92A] p-2 rounded-full">
+      <svg xmlns="http://www.w3.org/2000/svg" class="h-5 w-5 text-white" fill="none" viewBox="0 0 24 24" stroke="currentColor">
+        <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M5.121 17.804A1 1 0 006 19h12a1 1 0 00.879-1.516l-6-10a1 1 0 00-1.758 0l-6 10z"/>
+      </svg>
+    </button>
+  </div>
+
+  <!-- Image -->
+  <div class="bg-[#B7471E] flex justify-center p-6 rounded-b-[3rem]">
+    <img src="images/berry.jpg" class="rounded-full w-64 h-64 object-cover">
+  </div>
+
+  <!-- Content -->
+  <div class="p-6">
+    <h2 class="text-[#B7471E] font-bold text-xl mb-2">Berry Delight</h2>
+    <p class="text-sm text-gray-700 mb-4">
+      Minuman segar campuran sirup strawberry, susu, dan Yakult. Memberikan rasa manis dan asam segar, sebagai pelengkap cemilan utama.
+    </p>
+
+    <h3 class="font-semibold text-gray-800 mb-2">Ingredient</h3>
+    <div class="flex gap-2 flex-wrap mb-6">
+      <div class="bg-white p-2 rounded-xl shadow-md flex items-center gap-2">
+        <img src="images/strawberry.png" class="w-6 h-6"><span>Strawberry Syrup</span>
+      </div>
+      <div class="bg-white p-2 rounded-xl shadow-md flex items-center gap-2">
+        <img src="images/milk.png" class="w-6 h-6"><span>Milk</span>
+      </div>
+      <div class="bg-white p-2 rounded-xl shadow-md flex items-center gap-2">
+        <img src="images/Yakult.png" class="w-6 h-6"><span>Yakult</span>
+      </div>
+    </div>
+
+    <a href="https://wa.me/6282385989454" 
+       class="bg-[#B7471E] text-white text-center py-3 px-6 rounded-xl block font-semibold">
+      ORDER NOW
+    </a>
+  </div>
+
+</body>
+</html>
+>>>>>>>> a6f982b (initial commit):public/berry.html
