feat: update foto snackmates

--- a/public/index.html
+++ b/public/index.html
@@ -54,7 +54,7 @@
     <!-- Snackmates -->
     <div class="bg-white p-4 rounded-3xl w-64 shadow-md flex-shrink-0 
                 transform transition-all ease-in-out duration-500 hover:scale-105 hover:-translate-y-1 hover:shadow-xl">
-      <img src="images/snackmates.jpg" class="w-full h-28 rounded-xl object-cover">
+      <img src="images/bundle.JPEG" class="w-full h-28 rounded-xl object-cover">
       <h3 class="text-[#B7471E] font-bold mt-3">Snackmates</h3>
       <p class="text-sm text-gray-600 mt-1">
         Perpaduan gurih Bolo Fries dan manis segar Berry Delight. Teman sempurna untuk berbagi!
